fix: overflow-y in note dialog + instead of showing number of sentences show: short, medium and long

--- a/src/ui/styles/noteDialogStyle.css
+++ b/src/ui/styles/noteDialogStyle.css
@@ -40,7 +40,7 @@
 }
 
 .summarized-note-content {
-    max-height: 1000px;
+    max-height: 400px;
     width: 100%;
     overflow-y: scroll;
 }
